--- a/Plugins/pvNVIDIAIndeX/CMakeLists.txt
+++ b/Plugins/pvNVIDIAIndeX/CMakeLists.txt
@@ -9,6 +9,12 @@ paraview_add_plugin(pvNVIDIAIndeX
   MODULE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/src/vtk.module"
   XML_DOCUMENTATION OFF)
 
+# install kernels
+install(
+  DIRECTORY   "kernel_programs/"
+  DESTINATION "${CMAKE_INSTALL_DATAROOTDIR}/paraview${paraview_version_suffix}/kernels_nvidia_index"
+  COMPONENT   runtime)
+
 if (UNIX)
   set_target_properties(pvNVIDIAIndeX PROPERTIES LINK_FLAGS "-Wl,--as-needed")
 endif ()
