Update Series Preset to use a regexp matching
This regexp will be applied to seriesName and preset value.
If any, first matching group is used, otherwise whole matching.

This regexp will be applied to seriesName and preset value. If any, first matching group is used, otherwise whole matching.
E.g. series name is `y1 <custom>`, preset have `y1 <generic>` and `z1 <custom>`.
Then with the regexp `(.*) <.*>` the `y1 <custom>` series will match with `y1 <generic>`, whereas with `.* (<custom>)` it will match with `z1 <custom>`

--- a/Clients/ParaView/Testing/XML/CMakeLists.txt
+++ b/Clients/ParaView/Testing/XML/CMakeLists.txt
@@ -368,6 +368,9 @@ ExternalData_Expand_Arguments(ParaViewData _
   "DATA{${CMAKE_CURRENT_SOURCE_DIR}/../Data/Baseline/SeparatedColorMapA.png}"
   "DATA{${CMAKE_CURRENT_SOURCE_DIR}/../Data/Baseline/SeparatedColorMapB.png}"
   "DATA{${CMAKE_CURRENT_SOURCE_DIR}/../Data/Baseline/SeriesPreset.png}"
+  "DATA{${CMAKE_CURRENT_SOURCE_DIR}/../Data/Baseline/SeriesPresetRegexpNoRegexp.png}"
+  "DATA{${CMAKE_CURRENT_SOURCE_DIR}/../Data/Baseline/SeriesPresetRegexpYD.png}"
+  "DATA{${CMAKE_CURRENT_SOURCE_DIR}/../Data/Baseline/SeriesPresetRegexp.png}"
   "DATA{${CMAKE_CURRENT_SOURCE_DIR}/../Data/Baseline/Slice.png}"
   "DATA{${CMAKE_CURRENT_SOURCE_DIR}/../Data/Baseline/SliceDirectDoubleColoring.png}"
   "DATA{${CMAKE_CURRENT_SOURCE_DIR}/../Data/Baseline/SliceWithPlaneCellData.png}"
@@ -573,6 +576,7 @@ SET(TESTS_WITH_BASELINES
   MoleculeScalarBar.xml
   SelectionByArray.xml
   SeriesPreset.xml
+  SeriesPresetRegexp.xml
   TestHiddenLineRemoval.xml
   TestOpacityRendering.xml
 )
