Add new VRPlugin interactor styles

--- a/Plugins/VRPlugin/CMakeLists.txt
+++ b/Plugins/VRPlugin/CMakeLists.txt
@@ -41,10 +41,14 @@ set(sources
   vtkVRInteractorStyle.h
   vtkVRInteractorStyleFactory.cxx
   vtkVRInteractorStyleFactory.h
+  vtkVRMovePointStyle.cxx
+  vtkVRMovePointStyle.h
   vtkVRQueue.cxx
   vtkVRQueue.h
   vtkVRSpaceNavigatorGrabWorldStyle.cxx
   vtkVRSpaceNavigatorGrabWorldStyle.h
+  vtkVRStylusStyle.cxx
+  vtkVRStylusStyle.h
   vtkVRTrackStyle.cxx
   vtkVRTrackStyle.h
   vtkVRVirtualHandStyle.cxx
