Ignore warning about code defined in string_fortified.h

--- a/CMake/CTestCustom.cmake.in
+++ b/CMake/CTestCustom.cmake.in
@@ -12,6 +12,9 @@ list(APPEND CTEST_CUSTOM_WARNING_EXCEPTION
   # Ignore protobuf-generated source file warnings.
   "vtkPVMessage.pb.cc"
 
+  # ignore warning from string_fortified.h inclusion
+  "string_fortified.h"
+
   # Unreachable code in xutility causes C4702 warnings in MSVC.
   "xutility.*unreachable code"
 
