Add some warning exclusions for unhelpful warning messages

--- a/CMake/CTestCustom.cmake.in
+++ b/CMake/CTestCustom.cmake.in
@@ -20,7 +20,16 @@ list(APPEND CTEST_CUSTOM_WARNING_EXCEPTION
 
   # exclude warnings from dmfile.cxx
   "dmfile.*"
-  )
+
+  # exclude warnings from unreference NewInstance function
+  ".*NewInstance.*was declared but never referenced"
+
+  # Intel compiler warning about routines being both inline and noinline
+  "warning #2196.* routine is both"
+
+  # compiler optimizations may sometimes lead to this warning
+  "assuming signed overflow does not occur when assuming that"
+)
 
 list(APPEND CTEST_CUSTOM_ERROR_EXCEPTION
   # Xcb error does not seem to cause errors in generated test images
