Use vtkRedistributeDataSetFilter for ordered compositing
Reworking the parallel rendering / ordered composting code to use
vtkRedistributeDataSetFilter rather than D3. This results in changes to
how the Kd-tree is built and communicated for ordered compositing.
Information needed to build the kd-tree is also changed and arguably
simplified.

--- a/Remoting/Views/CMakeLists.txt
+++ b/Remoting/Views/CMakeLists.txt
@@ -55,6 +55,7 @@ set(classes
   vtkLogoSourceRepresentation
   vtkMoleculeRepresentation
   vtkMultiSliceContextItem
+  vtkOrderedCompositingHelper
   vtkOutlineRepresentation
   vtkPointGaussianRepresentation
   vtkPolarAxesRepresentation
