fixing up items the dashboard testers found
remove deprecated VTK_OVERRIDE
remove leftover unistd.h include from development for windows
depend on VTKCommonCore for smartpointer include
use vtkMath::Random() instead of drand48() for windows
explictly cast to int to silence a warning

--- a/Examples/Catalyst/TemporalCacheExample/CMakeLists.txt
+++ b/Examples/Catalyst/TemporalCacheExample/CMakeLists.txt
@@ -23,6 +23,7 @@ add_executable(CachingExample
 if (TARGET CachingExampleAdaptor)
   target_link_libraries(CachingExample
     PRIVATE
+      VTK::CommonCore
       CachingExampleAdaptor
       VTK::mpi)
 else ()
