SaveAnimation: extend test to check stereo images
Extending SaveAnimation test to check for saving of stereo images (and
video) with both eyes at the same time.

--- a/Remoting/Application/Testing/Python/CMakeLists.txt
+++ b/Remoting/Application/Testing/Python/CMakeLists.txt
@@ -71,6 +71,7 @@ set(ParaView::RemotingApplication_ARGS)
 # Add tests for pvbatch.
 
 vtk_module_test_data(
+  "${CMAKE_CURRENT_SOURCE_DIR}/../Data/Baseline/SaveAnimation_right.png"
   "${CMAKE_CURRENT_SOURCE_DIR}/../Data/Baseline/MultiView_chart_view.png"
   "${CMAKE_CURRENT_SOURCE_DIR}/../Data/Baseline/MultiView_render_view.png")
 
