Reorganize CMakeLists.txt files for several Catalyst examples
The examples did not build on all platforms - this commit fixes
most of the issues by:

  - ensuring the FEDataStructures are compiled and available as needed for targets
  - preventing a dependency on MPI::MPI_CXX where not needed by defining appropriate
    compiler definitions that prevent compilation with MPI_CXX functions
  - making TemporalCacheExample compile without Catalyst

--- a/Examples/Catalyst/TemporalCacheExample/CMakeLists.txt
+++ b/Examples/Catalyst/TemporalCacheExample/CMakeLists.txt
@@ -1,7 +1,13 @@
+set(mpi_definitions
+  MPICH_SKIP_MPICXX
+  OMPI_SKIP_MPICXX)
+
 if (USE_CATALYST)
   add_library(CachingExampleAdaptor
     FEAdaptor.cxx
-    FEAdaptor.h)
+    FEAdaptor.h
+    FEDataStructures.cxx
+    FEDataStructures.h)
   target_link_libraries(CachingExampleAdaptor
     INTERFACE
       VTK::PythonUsed
@@ -13,23 +19,33 @@ if (USE_CATALYST)
       VTK::CommonSystem
       VTK::FiltersGeneral
       VTK::FiltersHybrid
-      VTK::IOXML)
+      VTK::IOXML
+      MPI::MPI_C)
+  target_compile_definitions(CachingExampleAdaptor
+    PUBLIC
+      ${mpi_definitions})
 endif ()
 
-add_executable(CachingExample
-  FEDataStructures.cxx
-  FEDataStructures.h
-  FEDriver.cxx)
 if (TARGET CachingExampleAdaptor)
+  add_executable(CachingExample
+    FEDriver.cxx)
   target_link_libraries(CachingExample
     PRIVATE
-      VTK::CommonCore
       CachingExampleAdaptor
       VTK::mpi)
 else ()
+  add_executable(CachingExample
+    FEDriver.cxx
+    FEDataStructures.cxx
+    FEDataStructures.h)
   target_link_libraries(CachingExample
     PRIVATE
+      VTK::CommonSystem
+      VTK::CommonCore
       MPI::MPI_C)
+  target_compile_definitions(CachingExample
+    PUBLIC
+      ${mpi_definitions})
 endif ()
 
 if (BUILD_TESTING)
