--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -76,10 +76,10 @@ spack:centos7:
         - $LAUNCHER $spack buildcache list
     script:
         - $LAUNCHER $spack spec $paraview_spec
-        - $LAUNCHER $spack install --only dependencies -j $(nproc) $paraview_spec
+        - $LAUNCHER $spack install --no-check-signature --only dependencies -j $(nproc) $paraview_spec
         - export dependency_specs=`$LAUNCHER $spack find --format "{name}{@version}{%compiler}"`
         - $LAUNCHER $spack buildcache create -a -f -u -d $PWD/spack-cache $dependency_specs
-        - $LAUNCHER $spack install -j $(nproc) $paraview_spec
+        - $LAUNCHER $spack install --no-check-signature -j $(nproc) $paraview_spec
         - eval `$spack load --sh paraview`
         - pvserver --version
         - .gitlab/sccache --show-stats
