improve time handling for datasets with 1 timestep
We now respect time values for datasets with just 1 timestep.
vtkFileSeriesReader reports single timestep as normal. Similarly,
vtkSMAnimationScene uses single timestep to update animation range as
appropiate. In past, it would just ignore single timesteps.

Fixes #19777

--- a/Clients/ParaView/Testing/XML/CMakeLists.txt
+++ b/Clients/ParaView/Testing/XML/CMakeLists.txt
@@ -15,8 +15,9 @@ ExternalData_Expand_Arguments(ParaViewData _
   "DATA{${paraview_test_data_directory_input}/Data/can-restarts/,REGEX:.*}"
   "DATA{${paraview_test_data_directory_input}/Data/cloud_layers_1k.jpg}"
   "DATA{${paraview_test_data_directory_input}/Data/CompositeGlyphInput.vtp}"
-  "DATA{${paraview_test_data_directory_input}/Data/CompositeGlyphTree.vtm}"
   "DATA{${paraview_test_data_directory_input}/Data/CompositeGlyphTree/,REGEX:.*}"
+  "DATA{${paraview_test_data_directory_input}/Data/CompositeGlyphTree.vtm}"
+  "DATA{${paraview_test_data_directory_input}/Data/cube_1ts_mod.e}"
   "DATA{${paraview_test_data_directory_input}/Data/CubeStringArray.vtk}"
   "DATA{${paraview_test_data_directory_input}/Data/EnSight/,REGEX:.*}"
   "DATA{${paraview_test_data_directory_input}/Data/ExRestarts/,REGEX:.*}"
@@ -747,8 +748,9 @@ list(APPEND TESTS_WITH_BASELINES
   EnSight.xml
   EnSightTensorInversion.xml
   EnSightTensorInversionBin.xml
-  ExodusXML.xml
   ExodusGlobalDataWithRestarts.xml
+  ExodusSingleTimeStep.xml
+  ExodusXML.xml
   ExpandSelection.xml
   ExportLinePlotToCSV.xml
   ExportLinePlotToTSV.xml
