--- a/Remoting/Views/CMakeLists.txt
+++ b/Remoting/Views/CMakeLists.txt
@@ -37,6 +37,7 @@ set(classes
   vtkCaveSynchronizedRenderers
   vtkChartRepresentation
   vtkChartSelectionRepresentation
+  vtkChartTextRepresentation
   vtkChartWarning
   vtkCompositeRepresentation
   vtkContext2DScalarBarActor
