Allow connection to Catalyst from python
  * Add a python catalyst live connection example

--- a/Clients/ParaView/Testing/Python/CMakeLists.txt
+++ b/Clients/ParaView/Testing/Python/CMakeLists.txt
@@ -20,6 +20,7 @@ ExternalData_Expand_Arguments(ParaViewData _
   # baselines
   "DATA{${CMAKE_CURRENT_SOURCE_DIR}/../Data/Baseline/TestPythonViewMatplotlibScript.png}"
   "DATA{${CMAKE_CURRENT_SOURCE_DIR}/../Data/Baseline/TestPythonViewNumpyScript.png}"
+  "DATA{${CMAKE_CURRENT_SOURCE_DIR}/../Data/Baseline/TestCatalystClient.png}"
   )
 
 # only enable TestPythonAnnotationFilter test if numpy is available
@@ -186,4 +187,15 @@ paraview_add_test_python(
   TestStereoSaveScreenshot.py
 )
 unset(paraview_python_args)
+
 #------------------------------------------------------------------------------
+if (PARAVIEW_USE_MPI AND MPIEXEC_EXECUTABLE)
+  set(_vtk_testing_python_exe "$<TARGET_FILE:ParaView::smTestDriver>")
+  set(_vtk_test_python_args
+    --script $<TARGET_FILE:ParaView::pvbatch> -sym
+      ${CMAKE_CURRENT_SOURCE_DIR}/TestCatalystDriver.py
+    --client $<TARGET_FILE:ParaView::pvpython> -dr)
+  vtk_add_test_python(NO_DATA NO_RT TestCatalystClient.py)
+  unset(_vtk_testing_python_exe)
+  unset(_vtk_test_python_args)
+endif()
