Examples/CamAdaptor: require the C language too

--- a/Examples/Adaptors/CamAdaptor/CMakeLists.txt
+++ b/Examples/Adaptors/CamAdaptor/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.3)
-project(CamAdaptor CXX)
+project(CamAdaptor C CXX)
 
 find_package(ParaView REQUIRED COMPONENTS vtkPVPythonCatalyst)
 
