--- a/Qt/Widgets/Testing/Cxx/CMakeLists.txt
+++ b/Qt/Widgets/Testing/Cxx/CMakeLists.txt
@@ -7,8 +7,7 @@ SET(MyTests
 
 set(TestsNoArgs
   DoubleLineEdit
-  HierarchicalGridLayout
-  LogViewerWidget)
+  HierarchicalGridLayout)
 
 SET(MocSources
   DoubleLineEdit.h
