Ensure that Log Viewer closes at program exit
Changed pqLogViewerWindow to pqLogViewerDialog to reflect the change
in its parent class. Made the main window the parent widget so that
when it closes this dialog closes. Updated LogViewer test for these
changes.

--- a/Qt/Components/CMakeLists.txt
+++ b/Qt/Components/CMakeLists.txt
@@ -99,7 +99,7 @@ set(classes
   pqLiveInsituManager
   pqLiveInsituVisualizationManager
   pqLockViewSizeCustomDialog
-  pqLogViewerWindow
+  pqLogViewerDialog
   pqMemoryInspectorPanel
   pqMultiBlockInspectorWidget
   pqMultiQueryClauseWidget
@@ -218,7 +218,7 @@ set(ui_files
   Resources/UI/pqLinksEditor.ui
   Resources/UI/pqLinksManager.ui
   Resources/UI/pqLockViewSizeCustomDialog.ui
-  Resources/UI/pqLogViewerWindow.ui
+  Resources/UI/pqLogViewerDialog.ui
   Resources/UI/pqMemoryInspectorPanelForm.ui
   Resources/UI/pqMultiBlockInspectorWidget.ui
   Resources/UI/pqOrbitCreatorDialog.ui
