Add test for pqSeriesGeneratorDialog

--- a/Clients/ParaView/Testing/XML/CMakeLists.txt
+++ b/Clients/ParaView/Testing/XML/CMakeLists.txt
@@ -563,6 +563,7 @@ if(NOT APPLE)
 endif()
 
 SET(TESTS_WITH_BASELINES
+  ContourRange.xml
   DataAxesGrid.xml
   MoleculeScalarBar.xml
   SelectionByArray.xml
