--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -272,6 +272,7 @@ set(paraview_default_plugins
   PacMan
   PanoramicProjectionView
   # ParFlow - Because of dependency to nlohmann_json
+  SaveStateAndScreenshot
   SLACTools
   SierraPlotTools
   StreamLinesRepresentation
