cmake: force wrapping to be enabled in VTK
The module system tries to auto-detect if wrapping is possible based on
the existence of certain targets. Since we're building VTK itself here,
we have to force wrapping on (because ClientServer needs it).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -485,6 +485,7 @@ else ()
     TEST_DATA_TARGET    ParaViewData
     BUILD_WITH_KITS     "${PARAVIEW_BUILD_WITH_KITS}"
     USE_EXTERNAL        "${PARAVIEW_BUILD_WITH_EXTERNAL}"
+    ENABLE_WRAPPING     ON
     TEST_INPUT_DATA_DIRECTORY   "${CMAKE_CURRENT_SOURCE_DIR}/VTK/Testing"
     TEST_OUTPUT_DATA_DIRECTORY  "${CMAKE_CURRENT_BINARY_DIR}/ExternalData/VTK/Testing")
 
