Integration of overlapping cell detection in PV
This MR expose new VTK filter `vtkOverlappingCellsDetector`
Fixes #19722

--- a/Clients/ParaView/Testing/Python/CMakeLists.txt
+++ b/Clients/ParaView/Testing/Python/CMakeLists.txt
@@ -81,6 +81,7 @@ paraview_add_test_python(
   MergeBlocksPolyData.py
   PointPicking.py
   TestResetProperty.py
+  TestOverlappingCellsDetector.py
 )
 
 paraview_add_test_python(
