Add a ApplySettingsToCurrent in camera keyframe editor
 * with a 'interpolate' camera animation, the current keyframe
 settings can be applied to the camera.

--- a/Clients/ParaView/Testing/XML/CMakeLists.txt
+++ b/Clients/ParaView/Testing/XML/CMakeLists.txt
@@ -739,6 +739,7 @@ list(APPEND TESTS_WITH_BASELINES
   AdaptiveResampleToImage.xml
   AMRCutPlane.xml
   AMReXParticlesReader.xml
+  AnimationUseCamera.xml
   Annotations.xml
   ConvertToMolecule.xml
   ContourCellData.xml
