support data assembly
Adding ParaView components to support vtkDataAssembly. Adding support to
ServerManager to collect information about vtkDataAssembly. Adding
ability to define properties that use vtkDataAssembly. Adding Qt
components for using vtkDataAssembly to generate UI.

--- a/Qt/ApplicationComponents/CMakeLists.txt
+++ b/Qt/ApplicationComponents/CMakeLists.txt
@@ -81,6 +81,7 @@ set(classes
   pqCustomizeShortcutsDialog
   pqCustomViewpointsToolbar
   pqCylinderPropertyWidget
+  pqDataAssemblyPropertyWidget
   pqDataQueryReaction
   pqDataTimeStepBehavior
   pqDefaultMainWindow
@@ -234,6 +235,7 @@ set(ui_files
   Resources/UI/pqCustomResolutionDialog.ui
   Resources/UI/pqCylinderPropertyWidget.ui
   Resources/UI/pqCustomizeShortcutsDialog.ui
+  Resources/UI/pqDataAssemblyPropertyWidget.ui
   Resources/UI/pqDefaultMainWindow.ui
   Resources/UI/pqDoubleRangeSliderPropertyWidget.ui
   Resources/UI/pqEditMenuBuilder.ui
