--- a/Remoting/ServerManager/CMakeLists.txt
+++ b/Remoting/ServerManager/CMakeLists.txt
@@ -77,6 +77,7 @@ set(classes
   vtkSMCompoundSourceProxy
   vtkSMCompoundSourceProxyDefinitionBuilder
   vtkSMCoreUtilities
+  vtkSMDataAssemblyDomain
   vtkSMDataSourceProxy
   vtkSMDataTypeDomain
   vtkSMDeserializer
